[package]
name = "acadia"
version = "0.1.0"
edition = "2024"

[features]
acadia_assertion = []
vulkan_debug = []
default = ["acadia_assertion", "vulkan_debug"]

[dependencies]
ash = { version = "0.38.0", default-features = false, features = [
    "linked",
    "debug",
    "std",
] }
ash-window = "0.13.0"
winit = "0.30.12"
spirv = "0.4.0"
arrayvec = "0.7.6"
glam = "0.33.0"
bytemuck = "1.25.0"
